[package]
name = "tabwriter"
version = "1.2.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Elastic tabstops."
documentation = "https://docs.rs/tabwriter"
homepage = "https://github.com/BurntSushi/tabwriter"
repository = "https://github.com/BurntSushi/tabwriter"
readme = "README.md"
keywords = ["tabs", "elastic", "aligned", "whitespace", "table"]
license = "Unlicense/MIT"
edition = "2018"

[dependencies]
unicode-width = "0.1"
lazy_static =  { version = "1", optional = true}

[dependencies.regex]
version = "1.3"
optional = true
default-features = false
features = ["std"]

[features]
default = []
ansi_formatting = ["regex", "lazy_static"]
