[package]
name = "tabwriter"
version = "1.4.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Elastic tabstops."
documentation = "https://docs.rs/tabwriter"
homepage = "https://github.com/BurntSushi/tabwriter"
repository = "https://github.com/BurntSushi/tabwriter"
readme = "README.md"
keywords = ["tabs", "elastic", "aligned", "whitespace", "table"]
license = "Unlicense/MIT"
edition = "2021"

[dependencies]
unicode-width = "0.2.0"

[features]
default = []
ansi_formatting = []
