[package]
name = "tabwriter-bin"
version = "0.1.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Command line tool for elastic tabstops."
documentation = "https://docs.rs/tabwriter"
homepage = "https://github.com/BurntSushi/tabwriter"
repository = "https://github.com/BurntSushi/tabwriter"
readme = "README.md"
keywords = ["tabs", "elastic", "aligned", "whitespace", "table"]
license = "Unlicense/MIT"

[[bin]]
name = "tabwriter"
path = "src/main.rs"
doc = false
test = false

[dependencies]
docopt = "0.6"
rustc-serialize = "0.3"

[dependencies.tabwriter]
path = ".."
version = "0.1"
