[package]
name = "tabwriter-bin"
version = "0.1.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Command line tool for elastic tabstops."
documentation = "https://docs.rs/tabwriter"
homepage = "https://github.com/BurntSushi/tabwriter"
repository = "https://github.com/BurntSushi/tabwriter"
readme = "README.md"
keywords = ["tabs", "elastic", "aligned", "whitespace", "table"]
license = "Unlicense/MIT"

[[bin]]
name = "tabwriter"
path = "src/main.rs"
doc = false
test = false

[dependencies]
docopt = "1"
serde = "1"
serde_derive = "1"

[dependencies.tabwriter]
path = ".."
version = "1"
