[package]
name = "tabwriter-bin"
version = "0.2.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Command line tool for elastic tabstops."
documentation = "https://docs.rs/tabwriter"
homepage = "https://github.com/BurntSushi/tabwriter"
repository = "https://github.com/BurntSushi/tabwriter"
readme = "README.md"
keywords = ["tabs", "elastic", "aligned", "whitespace", "table"]
license = "Unlicense OR MIT"
edition = "2018"

[[bin]]
name = "tabwriter"
path = "src/main.rs"
doc = false
test = false

[dependencies]
docopt = "1"
serde = { version = "1", features = ["derive"] }

[dependencies.tabwriter]
path = ".."
version = "1"
